Removed example code

--- a/TMS/Pages/NRI/Nomenclature.razor
+++ b/TMS/Pages/NRI/Nomenclature.razor
@@ -4,55 +4,12 @@
 
     <div class="row">
 
-        <div class="row justify-content-between">
-            <form>
-                <div class="row justify-content-between ml-0 pl-0">
-                    Search by:
-                    <div class="col-6 col-md-auto mr-0 mr-md-3 pr-0 mb-3">
-                        <div class="row">
-                            <label>Title:</label>
-                            <input type="text" />
-                        </div>
-                        <div class="row">
-                            <label>Vendor code:</label>
-                            <input type="text" />
-                        </div>
-                    </div>
-                    <div class="w-100 d-md-none"></div>
-                    <div class="col pl-0 pr-md-0 mb-3">
-                        <div id="active-power-control"
-                             name="active-power-control"
-                             class="input-group">
-                            <input type="text" class="form-control" asp-for="InvertorSearchStr" />
-                            <div class="input-group-append">
-                                <button class="btn btn-primary " type="submit">
-                                    <i class="fa fas fa-search fa-1x"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+       <div class="container">
 
-            </form>
+       </div>
+        <div class="container">
+
         </div>
-            @*<div class="col-md-12">
-            <div class="row">
-                <label>Поиск по:</label>
-                <div class="col-md-8">
-                    <select>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                    </select>
-                    <input type="text" />
-                </div>
-                <div class="col-md-2">
-                    <button class="btn btn-primary">Найти</button>
-                </div>
-            </div>
-        </div>*@
-
             <div class="col-md-12">
                 <table class="table table-bordered table-responsive-lg table-hover">
                     <thead>
@@ -72,9 +29,9 @@
                             <td>Наименование1</td>
                             <td>12345678</td>
                             <td>
-                                <p>Длина - 1</p>
-                                <p>Ширина - 2</p>
-                                <p>Вес - 3</p>
+                                Длина - 1 <br />
+                                Ширина - 2 <br />
+                                Вес - 3 <br />
                             </td>
                         </tr>
                     </tbody>
