--- a/TMS/Shared/MainLayout.razor
+++ b/TMS/Shared/MainLayout.razor
@@ -5,11 +5,18 @@
 </div>
 
 <div class="main">
-    <div class="top-row px-4">
-        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-    </div>
+    <!-- СONTENT -->
 
+
+    <!-- СONTENT -->
     <div class="content px-4">
         @Body
     </div>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <p class="footer-copyright">
+            &copy; 2020 - Infocom LTD
+        </p>
+    </footer>
 </div>
