--- a/TMS/Shared/MainLayout.razor
+++ b/TMS/Shared/MainLayout.razor
@@ -1,12 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="sidebar">
-    <NavMenu />
-</div>
+    <div>
+        <div class="sidebar">
+            <NavMenu />
+        </div>
+    </div>
+
 
 <div class="main">
     <!-- СONTENT -->
-
+    <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        Link with href
+    </a>
 
     <!-- СONTENT -->
     <div class="content px-4">
